<resources>
    <string name="app_name">AndroidController</string>
    <string name="Level">Level: </string>
    <string name="Points">Points: </string>
    <string name="Lives">Lives: </string>
    <string name="btnUp">W</string>
    <string name="btnDown">S</string>
    <string name="btnLeft">A</string>
    <string name="btnRight">D</string>
    <string name="txtLevel">0</string>
    <string name="txtPoints">0</string>
    <string name="txtLives">0</string>
</resources>